--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Release Rate Adviser2",
-    "description": "Es una extencion que agreaga botones :v",
-    "version": "0.06",
+    "name": "Release Rate Adviser",
+    "description": "Es una extencion para llevar el conteo del Release Rate",
+    "version": "0.011",
     "manifest_version":3,
     "action":{
         "default_popup":"index.html"
@@ -9,8 +9,11 @@
     "content_scripts":[
 
         {
+            "world": "MAIN",
+            "all_frames": true,
+            "run_at": "document_idle",
             "matches":[
-                "https://*.youtube.com/*",
+                
                 "https://*.wwe.uhc.com/*"
             ],
             "js":["contentScript.js"]
