--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Release Rate Adviser",
     "description": "Es una extencion para llevar el conteo del Release Rate",
-    "version": "0.011",
+    "version": "0.25",
     "manifest_version":3,
     "action":{
         "default_popup":"index.html"
@@ -11,7 +11,7 @@
         {
             "world": "MAIN",
             "all_frames": true,
-            "run_at": "document_idle",
+            "run_at": "document_end",
             "matches":[
                 
                 "https://*.wwe.uhc.com/*"
