--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
     "name": "Release Rate Adviser",
     "description": "Es una extencion para llevar el conteo del Release Rate",
-    "version": "0.75",
+    "version": "0.87",
     "manifest_version":3,
     "action":{
         "default_popup":"index.html"
     },
+    "permissions":[
+        "tabs",
+        "activeTab"
+    ],
     "content_scripts":[
 
         {
@@ -20,6 +24,9 @@
         }
 
     ],
+    "background":{
+        "service_worker": "background.js"
+    },
     "icons": {
 
         "32":  "icons/icon_32.png",
@@ -29,7 +36,7 @@
     "externally_connectable": {
 
         "matches": ["https://*.wwe.uhc.com/*"]
-        
+
       }
     
 }
